--- a/index.html
+++ b/index.html
@@ -102,22 +102,22 @@
         }
 
         //Multile images at once using current available functions
-        const useDirectory = async (files) => {
-            const imageFiles = files.filter(file => {
-            const extensions = ['jpg', 'jpeg', 'png', 'gif'];
-            const fileExtension = file.name.split('.').pop().toLowerCase();
-            return extensions.includes(fileExtension);
-            });
-          for (const file of imageFiles) {
-            // Process each image file here
-            console.log(file.name);
-            // Example: useImage(file);
-            useImage(file);
-            
-
-            takeScreenshot();
-          }
-        }
+        //const useDirectory = async (files) => {
+        //    const imageFiles = files.filter(file => {
+        //    const extensions = ['jpg', 'jpeg', 'png', 'gif'];
+        //    const fileExtension = file.name.split('.').pop().toLowerCase();
+        //    return extensions.includes(fileExtension);
+        //    });
+        //  for (const file of imageFiles) {
+        //    // Process each image file here
+        //    console.log(file.name);
+        //    // Example: useImage(file);
+        //    useImage(file);
+        //    
+        //
+        //    takeScreenshot();
+        //  }
+        //}
 
 
         const takeScreenshot = async () => {
