--- a/index.html
+++ b/index.html
@@ -95,10 +95,19 @@
           player.use((input = new Webcam()))
           player.play()
         }
+        //const useImage = async (file) => {
+          //source = "image"
+          //player.use((input = new Image(file)))
+        //  player.play()
+        //}
         const useImage = async (file) => {
-          source = "image"
-          player.use((input = new Image(file)))
-          player.play()
+          source = "image";
+      
+          const image = new Image(file);
+          player.use((input = image));
+          player.play();
+
+          
         }
 
         //Multile images at once using current available functions
@@ -201,10 +210,10 @@
         Store.on("hair:changed", ({ enabled, color }) =>
           evalJs(`Hair.color(${enabled ? color.map((c) => `"${c}"`) : `"0 0 0 0"`})`)
         )
-        //Store.on("lipstick:changed", ({ enabled, color }) =>
-        //  evalJs(`Lips.color("${enabled ? color : "0 0 0 0"}")`)
-        //)
-        //Store.on("lipstick-params:changed", (name, { value }) => evalJs(`Lips.${name}(${value})`))
+        Store.on("lipstick:changed", ({ enabled, color }) =>
+          evalJs(`Lips.color("${enabled ? color : "0 0 0 0"}")`)
+        )
+        Store.on("lipstick-params:changed", (name, { value }) => evalJs(`Lips.${name}(${value})`))
         Store.on("background:changed", async (name, value) => {
           if (name === "texture" && typeof value === "string") value = await createFile(value)
           evalJs(
